2010-06-03  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (convert-to-pari): use symbols instead of
	numbers as the typecode argument in pari-cgetg invocations
	(convert-from-pari-vector): replaces convert-from-pari-VEC and
	convert-from-pari-COL
	(convert-from-pari): use it instead of them
	(convert-to-pari@vector): simplify

2010-06-02  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-typecode): export names
	(variable-order): add (call reorder)
	(euler): remove DEFINE-SYMBOL-MACRO
	(pari-real-precision): re-add function, setf, and symbol-macro
	(pari-real-precision-words): add a function on top of a variable
	(pari-call-out-prec): prec is specified in number of decimals

2010-06-01  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: use DEFSTRUCT instead of DEFCLASS for
	CLISP representation of PARI objects for speed and i/o

2010-06-01  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (main-loop): exit if (RETURN-FROM MAIN-LOOP) fails
	* makemake.in (check-script): check that loading a broken file
	from -x with -repl does not hang CLISP

2010-06-01  Sam Steingold  <sds@gnu.org>

	Fix bug#3009966: Problems with wild-inferiors in DIRECTORY :FULL T
	* pathname.d (directory_search): respect :FULL T on recursive
	subdirectory search

2010-05-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (interrupt_thread): make sure interrupt will not be lost when
	interrupted thread is waiting on mutex or exemption
	* zthread.d (EXEMPTION-WAIT): store in thread struct associated mutex
	(xlock_lock_helper): when handling pending interrupts - lock internal
	mutex before entering "safe for gc/interrupt" region.

2010-05-28  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (getstack, gettime)
	(gisprime, gispseudoprime): fix declarations
	(make-internal-pari-object): return NIL when PTR is NULL
	(pari-reader): use MAKE-INTERNAL-PARI-OBJECT
	(pari-to-lisp@null): return NIL
	(primpart, primitive-part, maxprime): add declarations