@@ -6,6 +6,8 @@
 	convert-from-pari-COL
 	(convert-from-pari): use it instead of them
 	(convert-to-pari@vector): simplify
+	(convert-from-pari-REAL): treat empty mantissa as 0 (no signed 0
+	in CLISP)
 
 2010-06-02  Sam Steingold  <sds@gnu.org>
 
